# sparkpost

./: .gitignore  README.md  sparkpost-nightly.yml  sparkpost.cabal  stack.yaml
src/Network/API/: SparkPost.hs
src/Network/API/SparkPost/: HTTP.hs  Messages.hs  Settings.hs  Trans.hs  Types.hs  Users.hs  Utils.hs  V1.hs
src/Network/API/SparkPost/Messages/: Types.hs
src/Network/API/SparkPost/Users/: Types.hs
src/Network/API/SparkPost/V1/: HTTP.hs  Settings.hs  Trans.hs  Transmission.hs  Types.hs  Utils.hs
src/Network/API/SparkPost/V1/Transmission/: Types.hs
