name:                sparkpost
version:             0.5.1.0
synopsis:            Library for interfacing with the SparkPost JSON API
description:         Pure Haskell client for the SparkPost JSON API
license:             MIT
license-file:        LICENSE
author:              Alfredo Di Napoli
maintainer:          alfredo.dinapoli@gmail.com
category:            Network
build-type:          Simple
tested-with:         GHC == 7.4, GHC == 7.6, GHC == 7.8, GHC == 7.10.2
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/adinapoli/sparkpost

library
  exposed-modules:
    Network.API.SparkPost
    Network.API.SparkPost.Settings
    Network.API.SparkPost.Types
    Network.API.SparkPost.Trans
    Network.API.SparkPost.Users
    Network.API.SparkPost.Users.Types
    Network.API.SparkPost.Messages
    Network.API.SparkPost.Messages.Types
  other-modules:
    Network.API.SparkPost.Utils
    Network.API.SparkPost.HTTP
  -- other-extensions:
  build-depends: base >=4.6 && < 5
               , containers >= 0.5.0.0
               , bytestring >= 0.9.0
               , base64-bytestring >= 1.0.0.1
               , text >= 1.0.0.0 && < 1.3
               , http-types >= 0.8.0
               , http-client >= 0.3.0
               , http-client-tls >= 0.2.0.0
               -- Blacklist Aeson 0.10.0.0
               , aeson ( >= 0.7.0.3 && < 0.10.0.0 ) || ( >= 0.11.0.0 && < 0.12.0.0 )
               , lens >= 4.0
               , blaze-html >= 0.5.0.0
               , QuickCheck >= 2.6 && < 2.9
               , mtl < 3.0
               , time
               , email-validate >= 1.0.0
               , old-locale
               , unordered-containers
  hs-source-dirs:
    src
  default-language:
    Haskell2010

  ghc-options:
    -funbox-strict-fields

test-suite sparkpost-tests
  type:
    exitcode-stdio-1.0
  main-is:
    Main.hs
  other-modules:
    Tests
    RawData
    Online
  hs-source-dirs:
    test
  default-language:
    Haskell2010
  build-depends:
      sparkpost -any
    , base
    , aeson
    , bytestring
    , QuickCheck
    , tasty >= 0.9.0.1
    , tasty-quickcheck
    , tasty-hunit
    , raw-strings-qq < 1.2
    , text
