name:                sparkpost
version:             0.1.0.0
synopsis:            Library for interfacing with the SparkPost JSON API
description:         Pure Haskell client for the SparkPost JSON API
license:             MIT
license-file:        LICENSE
author:              Alfredo Di Napoli
maintainer:          alfredo.dinapoli@gmail.com
category:            Network
build-type:          Simple
tested-with:         GHC == 7.10.3
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/adinapoli/sparkpost

library
  exposed-modules:
    Network.API.SparkPost.V1
    Network.API.SparkPost.V1.Settings
    Network.API.SparkPost.V1.Types
    Network.API.SparkPost.V1.Trans
    Network.API.SparkPost.V1.Transmission
    Network.API.SparkPost.V1.Transmission.Types
  other-modules:
    Network.API.SparkPost.V1.Utils
    Network.API.SparkPost.V1.HTTP
  -- other-extensions:
  build-depends: base >=4.6 && < 5
               , containers >= 0.5.0.0
               , bytestring >= 0.9.0
               , base64-bytestring >= 1.0.0.1
               , text >= 1.0.0.0 && < 1.3
               , http-types >= 0.8.0
               , http-client >= 0.3.0
               , http-client-tls >= 0.2.0.0
               -- Blacklist Aeson 0.10.0.0
               , aeson ( >= 0.7.0.3 && < 0.10.0.0 ) || ( >= 0.11.0.0 && < 0.12.0.0 )
               , lens >= 4.0
               , blaze-html >= 0.5.0.0
               , QuickCheck >= 2.6 && < 2.9
               , mtl < 3.0
               , time
               , email-validate >= 1.0.0
               , old-locale
               , string-conv
               , unordered-containers
  hs-source-dirs:
    src
  default-language:
    Haskell2010

  ghc-options:
    -funbox-strict-fields

test-suite sparkpost-tests
  type:
    exitcode-stdio-1.0
  main-is:
    Main.hs
  other-modules:
    Tests
    RawData
    Online
  hs-source-dirs:
    test
  default-language:
    Haskell2010
  build-depends:
      sparkpost -any
    , base
    , aeson
    , bytestring
    , QuickCheck
    , tasty >= 0.9.0.1
    , tasty-quickcheck
    , tasty-hunit
    , raw-strings-qq < 1.2
    , text
